--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -404,7 +404,7 @@ img[src=""] {
 	background-color: #e5e5e5;
 	padding: 12px;
 }
-.proptitle{
+.add-ellipsis{
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
