--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -400,8 +400,10 @@ img[src=""] {
   text-decoration: none;
 }
 .showprop .panel-title{
-	color: #777;
-	background-color: #e5e5e5;
+	color: white;
+  background: #06beb6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #48b1bf, #06beb6);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #48b1bf, #06beb6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	padding: 12px;
 }
 .add-ellipsis{
@@ -1061,7 +1063,7 @@ and (max-width: 339px){
 		font-size: inherit;
 	}
 	.splash-title{
-		top: 20px;
+		top: 100px;
 	}
 	.splash-title p{
 		text-align:center !important;
@@ -1146,7 +1148,7 @@ and (max-width: 767px){
 		font-size: inherit;
 	}
 	.splash-title{
-		top: 20px;
+		top: 100px;
 	}
 	.splash-title p{
 		text-align:center !important;
