--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -131,8 +131,8 @@ select{
 /* mfp container magnificPopup*/
 .prop_thumb{
 	border: 1px solid #ddd;
- 	border-radius: 4px;
- 	padding: 5px;
+ 	border-radius: 8px;
+ 	//padding: 5px;
 }
 .prop_thumb:hover{
 	box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
