--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -99,6 +99,10 @@ body {
 select{
 	text-align-last: center;
 }
+#no-proplisted{
+  top: 200px;
+  position: relative;
+}
 /*.dropdown:hover .dropdown-menu {
 		display: block;
 }*/
