--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -449,6 +449,9 @@ img[src=""] {
 }
 .footer-section{
 	color: white;
+	width: 100%;
+	background-color: #3ca597;
+	margin-top: 20px;
 }
 .footer-section a{
 	color: white;
@@ -461,9 +464,6 @@ img[src=""] {
    line-height: 20px;
 	 padding: 20px 0 20px;
  	 margin-bottom: -50px;
-}
-.footer-section{
-	width: 100%;
 }
 .footer-bottom .navi ul {
 	text-align: center;
